Fixing wikidot username wrapping

--- a/styles/main.css
+++ b/styles/main.css
@@ -157,6 +157,7 @@ span > a[href*="user:info"] {
 	width: -webkit-min-content;
 	width: -moz-min-content;
 	width: min-content;
+	white-space: nowrap;
 }
 
 .printuser img.small {
